# nilo-demo

./: .dockerignore  .gitignore  README.md  docker-compose.local.yml  docker-compose.yml
.github/workflows/: build-images.yml
client/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: main.ts  protocol.ts  scene.ts  style.css  transport.ts
client/src/engine/: GameLoop.ts  KeyboardInput.ts  WebTransportClient.ts  WebTransportLineClient.ts  dom.ts
client/src/game/: ArenaScene.ts  GameClientApp.ts  GameProtocolClient.ts  appElements.ts  config.ts  protocol.ts  renderState.ts  slopeGeometry.ts
client/src/game/debug/: DebugPanel.ts  DebugTelemetry.ts
client/src/game/net/: GameConnection.ts  protocol.ts
client/src/game/sync/: BoxExtrapolator.ts  LocalPlayerPredictor.ts  PlayerExtrapolator.ts  SnapshotInterpolator.ts  StateSynchronizer.ts
client/src/game/ui/: DebugPanel.ts
client/src/net/: WebTransportLineClient.ts
config/: game.json
server/: Cargo.toml  Dockerfile
server/certs/: README.md
server/src/: config.rs  main.rs  protocol.rs  room.rs  transport.rs
server/src/game/: mod.rs  protocol.rs  room.rs  server_host.rs  world.rs
server/src/game_net/: binary.rs  framing.rs  host.rs  mod.rs
server/src/net/: connection.rs  line_stream.rs  mod.rs  server.rs  webtransport_server.rs
