[package]
name = "nilo-demo-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rapier3d = "0.32.0"
glam = "0.30"
rand = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["io-util", "macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wtransport = "0.7.1"
